Adign updates to ipython file

--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -2927,9 +2927,55 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Tosq5gcGa1pb"
+      },
+      "source": [
+        "#Adding Extra work"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8ewhXwlhH81r"
+      },
+      "source": [
+        "dict12 = {'b': 1.6, 'c': 10, 'a': 'John Doe'}"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lCsFLdkTa6q1",
+        "outputId": "9389bc1a-1d81-4cec-92b9-5c0123653d67"
+      },
+      "source": [
+        "for keys,values in dict12.items():\r\n",
+        "  print(keys,values)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "b 1.6\n",
+            "c 10\n",
+            "a John Doe\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ksrnZZzibANg"
       },
       "source": [
         ""
